przed usuwaniem wykresu

--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -34,9 +34,6 @@
 					
 									var myArr={{ expense_sums |json_encode | raw  }};
 									
-									
-
-									
 									</script>
 	
 
@@ -100,7 +97,7 @@
     {% endblock %}
 
     
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.15.0/jquery.validate.min.js"></script>
 	<script type="text/javascript" src="/js/chart.js"></script>
 
 	
