poprawki wyglądu stron

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,22 +4,82 @@
 
 {% block body %}
 
-    <h1>Welcome</h1>
 
     {% if current_user %}
-        Hello {{ current_user.name }}.
+      <h1>   Hello {{ current_user.name }}</h1>
+
+   
 		
-			<div class="list-group">
-				<a href="Balance/expense" class="list-group-item">Add expense</a>
-				<a href="/Balance/income" class="list-group-item">Add income</a>
-				<a href="/Balance/thisMonth" class="list-group-item">Show balance</a>
-				<a href="/profile/edit" class="list-group-item">Setings</a>
+			<div>
+			<div class="row">
+				<div class="col-sm-6 p-1">
+					<div class="card text-white bg-secondary w-90 h-100">
+						<div class="card-body">
+							<h5 class="card-title">Expense</h5>
+							<p class="card-text">Quick add new item</p>
+							<a  href="Balance/expense" class="btn btn-primary">Add expense</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 p-1">
+					<div class="card text-white bg-secondary w-90 h-100">
+						<div class="card-body">
+						<h5 class="card-title">Income</h5>
+							<p class="card-text">Quick add new item</p>
+							<a  href="/Balance/income" class="btn btn-primary">Add income</a>
+					
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			
+
+	<div class="row">
+		<div class="col-sm-6 p-1">
+			<div class="card text-white bg-secondary w-90 h-100">
+			  <div class="card-body">
+				<h5 class="card-title">Balance</h5>
+				<p class="card-text">View your expenses and incomes for a selected period of time and check Your balance.</p>
+				<a href="/Balance/thisMonth" class="btn btn-primary">Show balance</a>
+			  </div>
+			</div>
+		</div>
+  <div class="col-sm-6 p-1">
+    <div class="card text-white bg-secondary w-90 h-100">
+      <div class="card-body">
+        <h5 class="card-title">Settings</h5>
+        <p class="card-text">Edit Your profile settings, change categorys or payment methods.</p>
+        <a href="/profile/edit" class="btn btn-primary">Settings</a>
+      </div>
+    </div>
+  </div>
+  </div>
 			</div>
 			
 
        
     {% else %}
-        <a href="/signup/new">Sign up</a> or <a href="/login">log in</a>.
+	  
+	
+			<div class="card text-white bg-trasparent border-success w-90 h-100">
+				<div class="card-body text-secondary ">
+					<h5 class="card-title ">Balance Manager</h5>
+	
+					<p class="card-text"> 
+					Welcome on Your finance manager aplication! This is the place where You can run Yours expenses and incomes. Start save money with us and sign up!
+					</p>
+		
+					<a class="btn btn-primary" href="/signup/new" >Sign up</a>  
+					<p class="card-text mb-1 mt-3">already have an account? Log in.</p>
+					<a class="btn btn-primary"" href="/login">log in</a>
+	
+	
+				</div>
+			</div>
+
+		
     {% endif %}
+
 
 {% endblock %}
