--- a/App/Views/Signup/success.html
+++ b/App/Views/Signup/success.html
@@ -4,8 +4,22 @@
 
 {% block body %}
 
-    <h1>Sign up</h1>
+    
 
-    <p>Success! Thank you for signing up.</p>
+   
+	
+				<div class="card text-white bg-trasparent border-success w-90 h-100">
+				<div class="card-body text-secondary ">
+					<h1 class="card-title ">Sign up</h1>
+	
+					<p class="card-text"> 
+					Success! Thank you for signing up. Check email and click activation link.
+					</p>
+		
+
+	
+	
+				</div>
+			</div>
 
 {% endblock %}
