--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -86,9 +86,12 @@
     <form method="post" action="/signup/create" id="formSignup">
 
         <div class="form group form group form-outline mb-4">
+		
             <label class="form-label" for="inputName">Name</label>
-            <input class="form-control" id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required />
+            <input class="form-control" id="inputName" name="name"  placeholder="Name"  autofocus value="{{ user.name }}" required />
+
 			
+        
         </div>
         <div class="form group form-outline mb-4">
             <label class="form-label" for="inputEmail">Email address</label>
@@ -102,8 +105,8 @@
 					 
 					<input class="form-control" type="password" id="inputPassword" name="password" placeholder="Password" required />
 					
-					<div class="ic">
-					<i class="bi bi-eye-slash" id="togglePassword"></i>
+					<div class="ic_eye">
+					<span class="bi bi-eye-slash" id="togglePassword"></span>
 					</div>
 				</div>	
 				
