--- a/App/Views/balance/income.html
+++ b/App/Views/balance/income.html
@@ -44,7 +44,7 @@
 						<div class="p-2">
 						<label for="date" >date of expense:</label>
 						<input class="form-control"type="text" id="date" name="date" 
-						value={{ time }}  placeholder="{{ time }}" onfocus="(this.type='date')"/>
+						value="{{ time }}"  onfocus="(this.type='date')"/>
 						</div>
 						</div>
 			</div>
