--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 	
+	
+	
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
-	
-	
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
 	
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/menu_style.css" />
 	
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+	
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+	<link rel="stylesheet"
+          href=
+"https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	
 	
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.min.js" integrity="sha512-OvBgP9A2JBgiRad/mM36mkzXSXaJE9BEIENnVEmeZdITvwT09xnxLtT4twkCa8m/loMbPHsvPl0T8lRGVBwjlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
@@ -39,6 +47,9 @@
 									<script type="text/javascript">
 					
 									var myArr={{ expense_sums |json_encode | raw  }};
+									
+
+
 									
 									</script>
 
@@ -79,10 +90,10 @@
 											<a href="lastYear">Last year</a>
 											
 											
-											<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
-
+											<a   data-bs-toggle="modal" data-bs-target="#exampleModal">Custom
+												
+											</a>
+											
 										
 										
 										
@@ -120,12 +131,12 @@
 											<form  method='post' id="date_form"  action="/balance/customAction">
 												<div class="col-sm-6">
 												<label class="d-flex justify-content-start" for="wprowadzDate">From:</label>
-												<input  type="date" name="start_date" id="start_date" min="2018-01-01" >
+												<input    class="inp_date" type="text"  placeholder="start date"   name="start_date" id="start_date" >
 												</div>
 													  
 												<div class="col-sm-6">  
 												<label class="d-flex justify-content-start"  for="wprowadzDate2">To:</label>
-												<input  type="date" name="end_date" id="end_date" min="2018-01-01" >
+												<input  class="inp_date" type="text" placeholder="end date" name="end_date" id="end_date"  >
 												</div>
 											</form>
 											</div>
