--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -60,15 +60,15 @@
   min-height: 450px;
    width: 100%;
 }
-.ic{
+.ic_eye{
 	position:absolute;
 	top:40px;
 	margin-left:90%;
 }
+
 .pass-icon{
 	position:relative;
 }
-
 
 		
          
